# sda-simulator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  api.rst  architecture.rst  concepts.rst  conf.py  data.rst  dataloaders.rst  development.rst  examples.rst  index.rst  metrics.rst  quickstart.rst  use_cases.rst  workflow.rst
docs/examples/: inventory.rst  logistics.rst  multi_echelon_inventory.rst
examples/: __init__.py
examples/inventory/: __init__.py  __main__.py  data.py  dataloader.py  main.py  metrics.py  models.py  policies.py  policy_comparison.py  visualize.py
examples/logistics/: __init__.py  __main__.py  assignment.py  data.py  domain.py  main.py  metrics.py  models.py  network.py  policies.py  policy_comparison.py  problem.md  rollout.py  visualize_demand.py  visualize_network.py
examples/multi_echelon_inventory/: README.md  __init__.py  __main__.py  data.py  domain.py  main.py  metrics.py  models.py  optimization.py  policies.py  visualize.py
sda/: __init__.py  core.py  data.py  metrics.py  model.py  simulation.py  tracking.py
sda/data/: __init__.py  _state.py  array.py  bootstrap.py  core.py  generator.py  module.py
tests/: test_data.py  test_imports.py  test_inventory.py  test_logistics.py  test_metrics.py  test_multi_echelon_inventory.py  test_simulation.py  test_tracking.py
