[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sda-simulator-v2"
version = "0.1.0"
description = "Minimal Sequential Decision Analytics simulation framework"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "analytics",
    "metrics",
    "simulation",
    "sequential-decision-making",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = [
    "sda*",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-s",
]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]
